# test-browser

./: build.mjs  index.mjs  package-lock.json  package.json  setup.sh
.githooks/: post-commit
cloudsync/: Cargo.toml
cloudsync/src/: auth.rs  db.rs  main.rs  sync.rs
mochi/: Cargo.toml
mochi/src/: constants.rs  main.rs
public/assets/css/vendors/font-awesome/css/: all.min.css
public/b/s/: jetty.all.js  jetty.sync.js
public/b/u/: serser.js
scripts/: git-init-hooks.mjs  patch.js
src/: 404.html  index.html
src/assets/css/: bookmarks.css  cloudsync.css  games.css  index.css  newtab.css  notifications.css  settings.css  tabs.css  themes.css  toast.css
src/assets/js/: entry.js  index.js
src/assets/js/core/: config.js  history.js  iframe.js  layout.js  load.js  novadesk-base.js  register.js  utils.js
src/assets/js/features/: bookmarks.js  cloudsync.js  games.js  notifications.js  settings.js  toast.js
src/assets/js/search/: search.js
src/assets/js/ui/: dom.js  ui.js
src/b/: sw.js
