[package]
name = "cloudsync"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
async-compression = { version = "0.4", features = ["brotli", "tokio"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
time = "0.3"
sha2 = "0.10"
tower = { version = "0.4", features = ["full"] }
tower_governor = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
mimalloc = "0.1"
dashmap = "6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true